--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/ModelKlassebeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/ModelKlassebeskrivelser.tex
@@ -2,6 +2,17 @@
 ModelsKlassebeskrivelse tekst her, wooow\\
 
 
+\textbf{Catalogue}\\
+Forklaring om catalogue, such wow
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{Systemdesign/SharedLib/Images/Klasser/Model/Catalogue.png}
+    \caption{Catalogue}
+    \label{fig:klasseModelCata}
+\end{figure}
+
 \textbf{Product}\\
 Forklaring om product, such wow
 
@@ -15,3 +26,35 @@ Forklaring om product, such wow
 
 \textbf{ProductCategory}\\
 Forklaring om productCategory, such wow
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{Systemdesign/SharedLib/Images/Klasser/Model/ProductCategory.png}
+    \caption{ProductCategory}
+    \label{fig:klasseModelPrdCtg}
+\end{figure}
+
+
+\textbf{Purchase}\\
+Forklaring om purchase, such wow
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.4\textwidth]{Systemdesign/SharedLib/Images/Klasser/Model/Purchase.png}
+    \caption{Purchase}
+    \label{fig:klasseModelPurch}
+\end{figure}
+
+
+\textbf{PurchasedProduct}\\
+Forklaring om purchasedproduct, such wow
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{Systemdesign/SharedLib/Images/Klasser/Model/PurchasedProduct.png}
+    \caption{PurchasedProduct}
+    \label{fig:klasseModelPurPrd}
+\end{figure}
