--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Marshallers.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Marshallers.tex
@@ -1,3 +1,5 @@
 \subsection{Marshallers}
 
 Marshaller tekst her, wooow
+
+\input{Systemdesign/SharedLib/Klassebeskrivelser/MarshalKlassebeskrivelser}
