Added file to presentations

--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
@@ -20,11 +20,6 @@ Denne skitse implementerede vi så.
 
 Da grænsefladen var opsat var det nu nødvendigt at opsætte viewmodels til at forbinde grænsefladen med de underliggende lag.
 
+\input{Systemdesign/Frontend/GUI/Styling}
 \input{Systemdesign/Frontend/GUI/View}
 \input{Systemdesign/Frontend/GUI/ViewModels}
-
-
-
-
-
-
