Sockets in sharedlib..

--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
@@ -15,8 +15,8 @@ Herunder ses en kort beskrivelse af de forskellige namespaces, og hvad de indeho
 
 \begin{itemize}
 \item \textbf{Models} indeholder datamodeller der i de forskellige systemer bruges som skabeloner. 
-\item \textbf{Threading} Bonjy WRITE STUFFSS!!. 
-\item \textbf{Sockets} Bonjy WRITE STUFFSS!!.
+\item \textbf{Threading} \textbf{Bonjy WRITE STUFFSS!!. NO JAKOB DOES DISS!!!!} 
+\item \textbf{Sockets} indeholder klasser til asynkron forbindelse til \gls{CS} samt de events der bliver raised a \gls{CS}.
 \item \textbf{Protocol} indeholder hele protokollen og er denne der bruges til kommunikation mellem alle delsystemer.
 \item \textbf{ProtocolMarshallers} indeholder de kodesprog der kan kommunikeres med.
 \item \textbf{Commands} indeholder de forskellige kommandoer der bruges til at sende information over protokollen.
