--- a/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT5.tex
@@ -11,7 +11,7 @@
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
 1 & \gls{SB} vælger "Test\gls{PD} 1" & Test\gls{PD} 1 markeres i \gls{PD}listen & & \\\hline
 2 & \gls{SB} trykker på knappen til rediger \gls{PD} & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn og nuværende \gls{PDK} for det markerede "Testpodukt 1" & & \\\hline
-3 & \gls{SB} ændrer navnet til Test\gls{PD} 1a, prisen til 150 samt \gls{PDK} til \gls{PDK} 2, hvorefter han trykker på knappen til gem. & \gls{SB} bliver præsenteret for en besked, der fortæller at data er sendt til serveren, og "Rediger \gls{PD}"-vinduet bliver lukket & & \\\hline
+3 & \gls{SB} ændrer navnet til Test\gls{PD} 1a, prisen til 150 samt \gls{PDK} til \gls{PDK} 2, hvorefter han trykker på knappen til gem. & \gls{SB}"Rediger \gls{PD}"-vinduet bliver lukket & & \\\hline
 4 & \gls{SB} observerer \gls{PD}listen. & Test\gls{PD} 1 ændres til Test\gls{PD} 2, prisen til 150 og kategorien til Testkategori 2, automatisk & & \\
 \hline
 \end{tabularx}
@@ -32,21 +32,5 @@ Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hlin
 \hline
 \end{tabularx}
 \caption{Accepttest 4: Rediger \gls{PD}, ext. 1}
-\label{tab:ATrp}
-\end{table}
-
-\begin{table}[H]
-\begin{tabularx}{\textwidth}{|p{0.5cm}|X|X|X|p{1.5cm}|}
-\hline
-\multicolumn{5}{|l|}{\textbf{Use case under test:} 4 - Rediger \gls{PD}} \\\hline
-\multicolumn{5}{|l|}{\textbf{Scenarie:} Ext. 2 - Central server melder fejl} \\\hline
-\multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} \gls{AS} har forbindelse til centralserver, databasen er \textit{ikke tilgængelig}. Der er et test\gls{PD} med navn "Test\gls{PD} 1" og pris "100" samt er i kategorien "Testkategori 1" og "Testkategori 2" i systemet.} \\\hline
-Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
-1 & \gls{SB} vælger "Test\gls{PD} 1" & Test\gls{PD} 1 markeres i \gls{PD}listen & & \\\hline
-2 & \gls{SB} trykker på knappen til rediger \gls{PD} & Et nyt vindue præsenteres for \gls{SB}, som viser hhv. pris, navn og nuværende kategori for det markerede "Testpodukt 1" & & \\\hline
-3 & \gls{SB} ændrer navnet til Test\gls{PD} 1a, prisen til 150 samt kategori til Kategori 2, hvorefter han trykker på knappen til gem. & \gls{SB} bliver præsenteret for en besked, der fortæller at der skete en fejl, og "Rediger \gls{PD}"-vinduet bliver lukket & & \\
-\hline
-\end{tabularx}
-\caption{Accepttest 4: Rediger \gls{PD} ext. 2}
 \label{tab:ATrp}
 \end{table}
