Added descriptions of unittests and references

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -43,3 +43,26 @@
   		note = {Tilgået: 09/12-2015}
 }
 
+@misc{	Nunit,
+		title = {NUnit unit-testing framwork},
+  		howpublished = {\url{http://nunit.org/}},
+  		note = {Tilgået: 10/12-2015}
+}
+
+@misc{	dotCover,
+		title = {dotCover Code Coverage Tool},
+  		howpublished = {\url{https://www.jetbrains.com/dotcover/}},
+  		note = {Tilgået: 10/12-2015}
+}
+
+@misc{	NSubstitute,
+		title = {NSubstitute .NET mocking framwork}},
+  		howpublished = {\url{http://nsubstitute.github.io/}},
+  		note = {Tilgået: 10/12-2015}
+}
+
+
+
+
+
+
