--- a/LaTeX/Projektdokumtation/Systemdesign/backend/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/Intro.tex
@@ -4,7 +4,7 @@
 Administrationssystemet er en applikation som kan tilføje, fjerne og redigere produkter eller kategorier i  systemets \gls{DB}.\\
 Applikationen er designet skalerbart, således brugeren ikke er begrænset til kun at kunne tilføje, fjerne eller redigere fra udelukkende en node, men derimod synkront holde databasen opdateret fra flere noder på en gang. Dette betyder at databasen og alle opkoblede administrationssystemer, altid vil være helt synkroniseret.
 
-\subsubsection*{Design og struktur}
+\subsubsection{Design og struktur}
 Backend er designet på baggrund af MVVM designmønstret~\cite{MVVM}. 
 \begin{figure}[!h]
     \centering
