--- a/LaTeX/Projektdokumtation/Test/IntegrationsTest.tex
+++ b/LaTeX/Projektdokumtation/Test/IntegrationsTest.tex
@@ -1,1 +1,5 @@
 \section{Integrationstest}
+\input{Test/Integrationstest/SharedLib_integration}
+\input{Test/Integrationstest/Backend_integration}
+\input{Test/Integrationstest/Frontend_integration}
+\input{Test/Integrationstest/CentralServer_integration}
