Started Unit Tests for Kasse

--- a/LaTeX/Projektdokumtation/Test/Unittest/Frontend_unit.tex
+++ b/LaTeX/Projektdokumtation/Test/Unittest/Frontend_unit.tex
@@ -1,1 +1,24 @@
 \subsection{Kasseapperat}
+I de følgende afsnit vil der kunne læses om unittests for \gls{KA}.\\\\
+
+\textbf{Introduktion}\\
+...\\
+
+\textbf{Testdetaljer}\\
+...
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.90\textwidth]{Test/Images/Frontend/UnitTests}
+	\caption{Unit Tests for Kasseapparat}
+	\label{fig:UTKA}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.90\textwidth]{Test/Images/Frontend/UnitTestCover}
+	\caption{Unit Tests Coverage for Kasseapparat}
+	\label{fig:UTCKA}
+\end{figure}
+
+\textbf{Beskrivelse af tests}\\
