Added jenkins as ref

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -61,6 +61,11 @@
   		note = {Tilgået: 10/12-2015}
 }
 
+@misc{	Jenkins,
+		title = {Jenkins continuous integration}},
+  		howpublished = {\url{https://jenkins-ci.org/}},
+  		note = {Tilgået: 10/12-2015}
+}
 
 
 
