--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -56,13 +56,14 @@
 }
 
 @misc{	NSubstitute,
-		title = {NSubstitute .NET mocking framwork}},
+		title = {NSubstitute .NET mocking framework},
   		howpublished = {\url{http://nsubstitute.github.io/}},
   		note = {Tilgået: 10/12-2015}
 }
 
+
 @misc{	Jenkins,
-		title = {Jenkins continuous integration}},
+		title = {Jenkins continuous integration},
   		howpublished = {\url{https://jenkins-ci.org/}},
   		note = {Tilgået: 10/12-2015}
 }
