--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/View.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/View.tex
@@ -1,3 +1,6 @@
 \subsubsection{View}
+Herunder vil de forskellige view filer kort blive beskrevet.
 
-Skal jeg overhovedet være med?
+\input{Systemdesign/Frontend/GUI/Styling}
+\input{Systemdesign/Frontend/GUI/MainWindowXAML}
+
