Text for integrationstest backend

--- a/LaTeX/Projektdokumtation/Test/IntegrationsTest.tex
+++ b/LaTeX/Projektdokumtation/Test/IntegrationsTest.tex
@@ -1,4 +1,6 @@
 \section{Integrationstest}
+Bla bla.. Dette er en intro til integrationstest.\\
+
 \input{Test/Integrationstest/SharedLib_integration}
 \input{Test/Integrationstest/Backend_integration}
 \input{Test/Integrationstest/Frontend_integration}
