--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/View.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/View.tex
@@ -1,5 +1,6 @@
 \subsubsection{View}
-Herunder vil de forskellige view filer kort blive beskrevet.
+
+Herunder vil de forskellige view filer kort blive beskrevet. \\
 
 \input{Systemdesign/Frontend/GUI/Styling}
 \input{Systemdesign/Frontend/GUI/MainWindowXAML}
