--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/Intro.tex
@@ -1,5 +1,4 @@
 \subsection{Introduktion}
-Kasseapparatet er et program som viser produkter og kan håndtere disse i en indkøbskurv, samt herfra gennemføre salg og danne salgskvitteringer. Produkterne som vises i kasseapparatet hentes fra Centralserveren\footnote{Se beskrivelse af systempakker på figur \ref{fig:system_oversigt}, side \pageref{fig:system_oversigt}}. De viste produkter i kasseapparatet opdateres ikke for hver ændring i produkter i CentralServer, men når en ekspedient beder om en opdatering manuelt. Denne funktionalitet er valgt, da det ikke var ønsket at produkter kom frem og forsvandt under brug af systemet. Da dette ville være forstyrrende for en ekspedient.
-
+Kasseapparatet er et program som benyttes af en ekspedient og det skal derfor være muligt for undertegnede at kunne gennemføre et salg ved brug af systemet. Dette betyder at kasseapparatet skal være i stand til at vise ekspedienten alle produktkategorier og herunder produkter. Det skal hertil være i stand til at føre disse produkter over til en indkøbskurv og herfra kunne gennemføre et salg og danne en salgskvittering. I denne del vil det beskrives hvordan denne funktionalitet er designet for at løse disse krav bedst muligt. Først vil systemets struktur blive beskrevet og herefter vil systemet blive beskrevet i henhold til softwarelagene Presentation-, Business Logic-, og Data Access Layer.\\
 
 \input{Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur}
